--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Training",
   "main": "index.html",
   "scripts": {
-    "start": "node server.js"
+    "start": "webpack-dev-server"
   },
   "author": "Yurii Scherba",
   "devDependencies": {
